# red-archive

./: .clang-format  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cpp-linter.yml
include/: archive.h  cli.h  version.h  version.h.in
src/: archive.c  archive.h  cli.c  cli.h
